--- a/dude-graph.html
+++ b/dude-graph.html
@@ -246,10 +246,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 this.set("saver", new dudeGraph.GraphSaver());
                 this.get("renderer").initialize(this.get("graph"), this.$.svg);
                 _.forEach(this.get("blockTypes"), function (blockType) {
-                    this.get("loader").registerBlockType(blockType.block, blockType.type);
+                    this.get("graph").registerCustomBlock(blockType.block, blockType.type);
                 }.bind(this));
                 _.forEach(this.get("pointTypes"), function (pointType) {
-                    this.get("loader").registerPointType(pointType.point, pointType.type);
+                    this.get("graph").registerCustomPoint(pointType.point, pointType.type);
                 }.bind(this));
                 _.forEach(this.get("renderBlockTypes"), function (renderBlockType) {
                     this.get("renderer").registerRenderBlock(renderBlockType.renderBlock, renderBlockType.type);
